--- a/templates/landing/home.html
+++ b/templates/landing/home.html
@@ -7,7 +7,7 @@
         <img src="{% static '/img/sea.jpg' %}">
     </div>
     <div class="section section1">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="text-center">Новые поступления</h1>
@@ -26,7 +26,7 @@
         </div>
     </div>
     <div class="section section2 fish-container">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
             <div class="col-lg-12">
                     <h1 class="text-center">Рыба</h1>
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class="section section3 kaef-container">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
             <div class="col-lg-12">
                     <h1 class="text-center">Моллюски</h1>
