--- a/templates/landing/home.html
+++ b/templates/landing/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="section-top">
-        <img src="{% static '/img/sea.jpg' %}">
+        <img src="{% static '/img/sea.jpg' %}" width="100%">
     </div>
     <div class="section section1">
         <div class="container-fluid">
