--- a/templates/products/product.html
+++ b/templates/products/product.html
@@ -13,9 +13,11 @@
                 {% endfor %}
             </div>
             <div class="col-lg-6">
-                <h1 class="text-center">
-                    {{ product.name }}
-                </h1>
+                <div class="label">
+                    <h1 class="text-center">
+                        {{ product.name }}
+                    </h1>
+                </div>
                 <div class="">
                     <p>
                         Цена: {{ product.price }}
